Full work of Logs testing, Fixing errors with bills